--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -2,13 +2,14 @@ name: Check Pull Request
 
 on:
   schedule:
-    - cron: '0 7 * * 1'
+    - cron: "0 7 * * 1"
   pull_request:
     branches:
       - main
       - develop
     types:
       - opened
+      - edited
       - reopened
       - synchronize
       - ready_for_review
@@ -19,13 +20,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
-      - name: Test code and Create Test Coverage Reports
-        uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
         with:
           node-version-file: .nvmrc
           cache: npm
+
+      - name: Install dependencies
+        run: |
+          npm ci
+
+      - name: Test Docker Image Build
+        run: |
+          set +e
+          docker build --no-cache --tag cas-mis .
+          exit $?
+
+      - name: Run Tests
+        run: |
+          mkdir -p coverage
+          chmod -R a+rw ./coverage
+          docker compose -f compose.yaml -f compose.test.yaml run --rm "cads-mis"
+
       - run: |
           npm ci
           npm run build:frontend
@@ -33,15 +51,19 @@ jobs:
           npm run lint
           npm test
 
-      - name: Test Docker Image Build
-        run: |
-          set +e
-          docker build --no-cache --tag cdp-node-frontend-template .
-          exit $?
-
-#      - name: SonarCloud Scan
-#        if: github.actor != 'dependabot[bot]'
-#        uses: SonarSource/sonarqube-scan-action@v5.3.1 #  (or check latest version on https://github.com/marketplace/actions/official-sonarqube-scan)
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: SonarCloud Scan
+        if: github.actor != 'dependabot[bot]'
+        uses: SonarSource/sonarqube-scan-action@v7.0.0 #  (or check latest version on https://github.com/marketplace/actions/official-sonarqube-scan)
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        continue-on-error: true
+#  test:
+#    name: Run Journey Tests
+#    runs-on: ubuntu-latest
+#    steps:
+#     - uses: actions/checkout@v6
+#      - run: docker build -t defradigital/cads-mis:${{github.sha}} .
+#      - uses: DEFRA/cads-mis-journey-tests/run-journey-tests@main
+#        with:
+#          portal-frontend: ${{github.sha}}
