--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": ">=22.16.0"
   },
   "scripts": {
-    "build:frontend": "NODE_ENV=production webpack",
+    "build:frontend": "cross-env NODE_ENV=production webpack",
     "dev": "run-p frontend:watch server:watch",
     "dev:debug": "run-p frontend:watch server:debug",
     "docker:dev": "npm run dev",
@@ -23,12 +23,12 @@
     "lint:js:fix": "eslint . --fix",
     "lint:scss": "stylelint \"src/**/*.scss\" --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore",
     "pretest": "npm run build:frontend",
-    "test": "TZ=UTC vitest run --coverage",
-    "test:watch": "TZ=UTC vitest",
+    "test": "cross-env TZ=UTC vitest run --coverage",
+    "test:watch": "cross-env TZ=UTC vitest",
     "server:watch": "nodemon --inspect=0.0.0.0 --ext js,json --legacy-watch ./src",
     "server:debug": "nodemon --inspect-brk=0.0.0.0 --ext js,json --legacy-watch ./src",
     "prestart": "npm run build:frontend",
-    "start": "NODE_ENV=production node --use-strict .",
+    "start": "cross-env NODE_ENV=production node --use-strict .",
     "setup:husky": "node -e \"try { (await import('husky')).default() } catch (e) { if (e.code !== 'ERR_MODULE_NOT_FOUND') throw e }\" --input-type module"
   },
   "author": "Defra DDTS",
@@ -73,7 +73,9 @@
     "cheerio": "1.1.0",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "13.0.0",
+    "cross-env": "10.1.0",
     "eslint": "9.31.0",
+    "eslint-plugin-package-json": "0.88.2",
     "husky": "9.1.7",
     "neostandard": "0.12.1",
     "nodemon": "3.1.10",
