Minor fix to ensure the correct Docker container name

--- a/compose.yml
+++ b/compose.yml
@@ -35,6 +35,7 @@ services:
 ################################################################################
 
   cads_mis:
+    container_name: "cads_mis"
     build: ./
     ports:
       - '3000:3000'
