--- a/compose.yml
+++ b/compose.yml
@@ -2,6 +2,7 @@ name: 'cads_mis'
 services:
 
   localstack:
+    container_name: "cds-localstack-emulator"
     image: localstack/localstack:3.0.2
     ports:
       - '4566:4566' # LocalStack Gateway
@@ -14,10 +15,10 @@ services:
       SERVICES: s3,sqs,sns,firehose
       LOCALSTACK_HOST: 127.0.0.1
     volumes:
-      - '${TMPDIR:-/tmp}/localstack:/var/lib/localstack'
+      - './localstack_data:/var/lib/localstack'
       - ./compose/start-localstack.sh:/etc/localstack/init/ready.d/start-localstack.sh
     healthcheck:
-      test: ['CMD', 'curl', 'localhost:4566']
+      test: [ 'CMD', 'curl', 'http://cds-localstack-emulator:4566/health' ]
       interval: 5s
       start_period: 5s
       retries: 3
@@ -25,6 +26,7 @@ services:
       - cdp-tenant
 
   redis:
+    container_name: "cds-redis"
     image: redis:7.2.3-alpine3.18
     ports:
       - '6379:6379'
@@ -36,6 +38,7 @@ services:
 
   cads_mis:
     container_name: "cads_mis"
+    platform: linux
     build: ./
     ports:
       - '3000:3000'
@@ -53,7 +56,7 @@ services:
       PORT: 3000
       NODE_ENV: development
       REDIS_HOST: redis
-      LOCALSTACK_ENDPOINT: http://localstack:4566
+      LOCALSTACK_ENDPOINT: http://cds-localstack-emulator:4566
       USE_SINGLE_INSTANCE_CACHE: true
     networks:
       - cdp-tenant
